Fix logo size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1061,7 +1061,7 @@ div#terms-and-conditions div.content p,div#privacy-policy div.content p {
   }
 
   .header .logo a img {
-    width: 26px;
+    width: 40px;
     height: 40px;
   }
 
